--- a/css/F1.css
+++ b/css/F1.css
@@ -3,6 +3,43 @@
     display: flex;
     align-items: center;
 }
+.crdjaipur{
+    width: 100%;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    margin-left: 65px;
+}
+.crd-jct{
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px 30px 50px 30px;
+    margin: 40px;
+    border: none;
+    align-items: center;
+    transition: 0.3s;
+}
+.crd-jct:hover{
+    box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
+    transform: scale(1.005);
+}
+.crd-jct-h3 a{
+    text-decoration: none;
+    color: rgb(54, 53, 53);
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+}
+.crd-jct-h3 a:hover{
+    color: rgb(88, 153, 45);
+}
+.crd-jct-p{
+    margin-top: -15px;
+    font-family: "Poppins", sans-serif;
+    color: gray;
+    line-height: 23px;
+    letter-spacing: 1px;
+    border-bottom: 1px solid #d3cfcf;
+    padding-bottom: 15px;
+}
 body{
     background-color: rgb(243, 238, 233);
 }
@@ -38,6 +75,7 @@ body{
     padding: 0 25px 0 20px;
     box-sizing: border-box;
     border-radius: 10px;
+box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
 }
 .sedan{
     margin: 100px 0 100px 160px;
@@ -192,6 +230,7 @@ body{
 align-items: center;
 background-color:white;
 box-sizing: border-box;
+box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
 }
 
 .menu-ul{
@@ -211,6 +250,7 @@ box-sizing: border-box;
  .menu-ul li a:hover{
     color: orange;
 }
+
 .active{
     color: orange !important;
 
@@ -219,7 +259,15 @@ box-sizing: border-box;
     position: relative;
     z-index: -1;
     margin-top: -40px;
+    width: 100%;
+    height: 460px;
 }
+/* .data-chc{
+    background: rgba(0, 0, 0, 0.2);
+    z-index: -1;
+    width: 100%;
+} */
+
 .sec-chc{
     position: absolute;
     top: 250px;
@@ -232,15 +280,71 @@ box-sizing: border-box;
     letter-spacing: 2px;
     font-size: 40px;
 }
+
 .rnt-h{
     margin-left: -50px;
+}
+.him-p{
+    margin-left: -150px;
 }
 .abt-1{
     margin-left: 25px;
 }
 .pkj-p{
-    margin-left: -20px;
+    margin-left: -25px;
 }
+.rj-n{
+    margin-left: -40px;
+}
+.utt-d{
+    margin-left: -80px;
+}
+.chr-d{
+    margin-left: -40px;
+}
+.jct{
+    margin-left: -110px;
+}
+.jat{
+    margin-left: -160px;
+}
+.mrt{
+    margin-left: -180px;
+}
+.rrt{
+    margin-left: -220px;
+}
+.rtgz{
+    margin-left: -370px;
+}
+.urt{
+    margin-left: -300px;
+}
+.japtj{
+    margin-left:-400px;
+}
+.ue{
+    margin-left: -200px;
+}
+.rhtp{
+    margin-left: -360px;
+}
+.mgt{
+    margin-left: -150px;
+}
+.smht{
+    margin-left: -430px;
+}
+.rgtu{
+    margin-left: -490px;
+}
+.sjtp{
+    margin-left: -390px;
+}
+.kr-l{
+    margin-left: 5px;
+}
+
 .chc-h{
     display: flex;
     align-items: center;
@@ -248,16 +352,52 @@ box-sizing: border-box;
     font-weight: 500;
     font-size: 15px;
     letter-spacing: 1px;
-    margin:-50px 0 0 60px
+    margin:-50px 0 0 60px;
 }
+.chc-h2{
+    display: flex;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin:-50px 0 0 -20px;
+}
+.chc-h3{
+    display: flex;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin:-50px 0 0 10px;
+}
+
 .chc-h i{
+    padding: 0 15px;
+}
+.chc-h2 i{
+    padding: 0 15px;
+}
+.chc-h3 i{
     padding: 0 15px;
 }
 .chc-h a{
     text-decoration: none;
     color: white;
 }
+.chc-h2 a{
+    text-decoration: none;
+    color: white;
+}
+.chc-h3 a{
+    text-decoration: none;
+    color: white;
+}
 .chc-h a:hover{
+    text-decoration:underline;
+}
+.chc-h2 a:hover{
     text-decoration:underline;
 }
 .cfaq{
@@ -343,6 +483,7 @@ textarea:focus{
     letter-spacing: 10px;
 } */
 .contact_form{
+    box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
     width: 50%;
     margin-left: 22%;
     background-color: white;
@@ -374,9 +515,29 @@ margin-top: -40px;
 .button2:hover{
     opacity: 0.9 !important;
 }
-.bgimage-btn a:hover{
-    background-color: red !important;
+.bt-n{
+    text-decoration: none;
+    color: white;
 }
+.button-jct{
+    background-color: orange;
+    color: white;
+    font-size: 15px;
+    border: 1px solid orange ;
+    padding: 10px 30px 10px 30px;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-left: 590px;
+}
+.button-jct:hover{
+    border: 1px solid green;
+    opacity: 0.9;
+}
+.jct-btn{
+    text-decoration: none;
+    color: white;
+}
+
 .A-1{
     font-weight: 1000;
     letter-spacing: 1px;
@@ -395,10 +556,11 @@ margin-top: -40px;
     width: 80%;
     margin-left: 10%;
     margin-top: -45px;
-    border: 1px;
     background-color: white;
     box-sizing: border-box;
-   padding:20px 0 20px 20px
+    overflow: hidden;
+   padding:20px 0 20px 20px;
+box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
 
 }
 .button-1{
@@ -424,6 +586,7 @@ margin-top: -40px;
     letter-spacing: 5px;
     font-family:Arial, Helvetica, sans-serif;
 }
+
 .v-r{
     margin-bottom: 50px;
 }
@@ -445,6 +608,13 @@ margin-top: -40px;
     font-size: 20px;
     font-weight: 550;
     color: rgb(75, 67, 67);
+}
+.vehi{
+    padding-top: 70px;
+    height: 310px;
+}
+.tempo{
+    margin-top: 30px;
 }
 .c-r{
     margin: 30px 0 150px 30px;
@@ -557,6 +727,7 @@ color:rgb(172, 172, 167) ;
 .img-g-1,.img-g-6{
     background-color:  antiquewhite !important;
 }
+
 .button-a{
     background-color: orange;
     color: white;
@@ -564,6 +735,7 @@ color:rgb(172, 172, 167) ;
     border: none;
     padding: 10px 30px 10px 30px;
     cursor: pointer;
+    margin-top: 30px;
 }
 .button-a:hover{
     opacity: 0.9;
@@ -577,20 +749,35 @@ color:rgb(172, 172, 167) ;
     font-family:Arial, Helvetica, sans-serif;
 }
 .explore{
-    font-weight:700;
+    font-weight:1000;
     letter-spacing: 2px;
     font-size: 25px;
-    font-family: "Poppins", sans-serif;;
-    margin-top: -10px;
+    font-family: "Poppins", sans-serif;
+    margin-top: -20px;
+}
+.explore-p{
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    margin-top: -20px;
+    
+}
+.explore-p i{
+    margin-right: 10px;
+    color: orange;
+}
+.explore-p span{
+    color: rgb(97, 94, 94);
 }
 .item-11{
     grid-area: 1/3;
     position: relative;
     cursor: pointer;
     opacity: 1;
+    transition: 1s;
 }
 
-.item-12,.item-13,.item-14,.item-15,.item-16,.item-17{
+.item-12,.item-13,.item-14,.item-15,.item-16,.item-17,.item-18,.item-19,.item-20,.item-21,.item-22,.item-23,.item-24,.item-25{
     position: relative;
     cursor: pointer;
 }
@@ -604,6 +791,73 @@ color:rgb(172, 172, 167) ;
     width: 79.7%;
     border-top: 1px solid rgb(201, 195, 195);
 }
+.jaipur{
+    position: absolute;
+    bottom: 5px;
+    left: 1px;
+    color: white;
+    background:rgb(0,0,0,0.4);
+    padding: 13.5px 35px 13.5px 35px;
+    width: 79.7%;
+    border-top: 1px solid rgb(201, 195, 195);
+}
+.kedar-th{
+    position: absolute;
+    bottom: 5px;
+    left: 381.8px;
+    color: white;
+    background:rgb(0,0,0,0.4);
+    padding: 25px 21px;
+    width: 27.73%;
+    border-top: 1px solid rgb(201, 195, 195);
+}
+.kedar-th:hover{
+    opacity: 0.4;
+    position: absolute;
+    padding: 92.5px 0px;
+    background:rgb(0,0,0,0.4);
+    margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
+}
+.k-g-t{
+    position: absolute;
+    bottom: 5px;
+    left: 58.8px;
+    color: white;
+    background:rgb(0,0,0,0.4);
+    padding: 25px 21px;
+    width: 66%;
+    border-top: 1px solid rgb(201, 195, 195);
+}
+.ek-fg{
+    position: absolute;
+    bottom: 5px;
+    left:58px;
+    color: white;
+    background:rgb(0,0,0,0.4);
+    padding: 13.5px 35px 13.5px 35px;
+    width: 60%;
+    border-top: 1px solid rgb(201, 195, 195);
+}
+.k-g-t:hover{
+    opacity: 0.4;
+    position: absolute;
+    padding: 92.5px 0px;
+    background:rgb(0,0,0,0.4);
+    margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
+}
+.ek-fg:hover{
+    opacity: 0.4;
+    position: absolute;
+    padding: 80.5px 14px;
+    background:rgb(0,0,0,0.4);
+    margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
+}
 
 .raj-img:hover{
     position: relative;
@@ -612,46 +866,78 @@ color:rgb(172, 172, 167) ;
 }
 
 .Rajasthan:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
+    
 }
 .Himachal:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 .Uttrakhand:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;      
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 .Char-Dham:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 .Golden:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 .Kashmir:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 .Kerala:hover{
+    opacity: 0.4;
     position: absolute;
     padding: 93px 13.5px;
     background:rgb(0,0,0,0.4);
     margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
+}
+.jaipur:hover{
+    height: 21px;
+    opacity: 0.4;
+    position: absolute;
+    padding: 93px 13.5px;
+    background:rgb(0,0,0,0.4);
+    margin: 40px 40px 20px 21px;
+    outline: 22px solid rgb(216, 212, 212);
+    transition: 0.4s;
 }
 
 .button-bc{
@@ -686,6 +972,8 @@ color:rgb(172, 172, 167) ;
     margin-left: -60px;
     margin-right: 100px;
     padding: 30px 30px 50px 50px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
 }
 .about{
     font-family: Arial, Helvetica, sans-serif;
@@ -809,6 +1097,7 @@ color:rgb(172, 172, 167) ;
     box-sizing: border-box;
     margin: 60px 0;
     padding-bottom: 50px;
+    box-shadow: 2px 2px 15px 0  rgba(0, 0, 0, 0.2);
 }
 .p-off{
     font-family: "Poppins", sans-serif;
@@ -860,6 +1149,7 @@ color:rgb(172, 172, 167) ;
 .button-form-2:hover{
     opacity: 0.9;
 }
+
 footer{
     background-color: rgb(31, 30, 30);
     width: 100%;
